add ngettext, dngettext (for glib)

--- a/CHANGES
+++ b/CHANGES
@@ -36,6 +36,7 @@
     * int -> ssize_t for read and write
     * sigjmp.c: __mask_was_saved was not set in all cases!
     * another round of ILP64 cleanups
+  add ngettext, dngettext (for glib)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
