--- a/CHANGES
+++ b/CHANGES
@@ -39,6 +39,7 @@
   add ngettext, dngettext (for glib)
   add strdupa and strndupa (for directfb)
   add extended attribute, thread, and misc syscalls
+  Olaf: fixed my libdl code to run with gcc-4.0.x
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
