make sure ftw returns in the directory it was called from

--- a/CHANGES
+++ b/CHANGES
@@ -41,6 +41,7 @@
   add extended attribute, thread, and misc syscalls
   Olaf: fixed my libdl code to run with gcc-4.0.x
   support optstring starting with '-' extension in getopt_long (Jens Låås)
+  make sure ftw returns in the directory it was called from
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
