tzfile fix for recent gcc

--- a/CHANGES
+++ b/CHANGES
@@ -43,6 +43,7 @@
   support optstring starting with '-' extension in getopt_long (Jens Låås)
   make sure ftw returns in the directory it was called from
   Olaf: fixing a bug in timegm (an off by ONE array access)...
+  tzfile fix for recent gcc
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
