--- a/CHANGES
+++ b/CHANGES
@@ -46,6 +46,7 @@
   tzfile fix for recent gcc
   make resolv.conf more glibcish so openssh 4.3p1 compiles
   add linux/* glue to make openssh compile with tun/tap support
+  fix putenv (René Rebe, Thomas Ogrisegg)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
