fix unlockpt (Gernot Tenchio)

--- a/CHANGES
+++ b/CHANGES
@@ -48,6 +48,7 @@
   add linux/* glue to make openssh compile with tun/tap support
   fix putenv (René Rebe, Thomas Ogrisegg)
   limit search/domain entries in /etc/resolv.conf (Gernot Tenchio)
+  fix unlockpt (Gernot Tenchio)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
