--- a/CHANGES
+++ b/CHANGES
@@ -58,6 +58,7 @@
   fix mmap and provide mmap64 on S/390 (Bastian Blank)
   fix telldir, seekdir (Gernot Tenchio)
   also add -lc after -lgcc for gcc 4.1 on arm (Enrico Scholz)
+  update SSP (ProPolice) support (with help from Eduardo Tongson)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
