fix buffer underflow in strncpy if n==0 and WANT_FULL_POSIX_COMPAT     is defined (it's normally not) (Ilja van Sprundel)

--- a/CHANGES
+++ b/CHANGES
@@ -59,6 +59,8 @@
   fix telldir, seekdir (Gernot Tenchio)
   also add -lc after -lgcc for gcc 4.1 on arm (Enrico Scholz)
   update SSP (ProPolice) support (with help from Eduardo Tongson)
+  fix buffer underflow in strncpy if n==0 and WANT_FULL_POSIX_COMPAT
+    is defined (it's normally not) (Ilja van Sprundel)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
