--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
+  fix printf %u/%x on 64-bit platforms
 
 0.30:
   put exception handling frames in read-only section on AMD64 and S/390
