fix fd leak in if_nameindex (Florian Westphal)   fix printf %g (well, get closer)

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
   fix printf %u/%x on 64-bit platforms
+  fix fd leak in if_nameindex (Florian Westphal)
+  fix printf %g (well, get closer)
 
 0.30:
   put exception handling frames in read-only section on AMD64 and S/390
