--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@
     - strftime
     - sunrpc code
   faster qsort
+  support %j in printf (Gernot Tenchio)
 
 0.30:
   put exception handling frames in read-only section on AMD64 and S/390
