--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@
     - sunrpc code
   faster qsort
   support %j in printf (Gernot Tenchio)
+  do omit the frame pointer on x86_64
 
 0.30:
   put exception handling frames in read-only section on AMD64 and S/390
