add ctime_r (for c-icap, Gernot Tenchio)

--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@
   do the magic required for -fstack-protector in gcc 4.1.1 to actually
     work (which includes setting up thread local storage), so far on
     i386 and amd64
+  add ctime_r (for c-icap, Gernot Tenchio)
 
 0.30:
   put exception handling frames in read-only section on AMD64 and S/390
