--- a/CHANGES
+++ b/CHANGES
@@ -39,6 +39,7 @@
   add const to cfgetispeed and cfgetospeed arguments
   fix off-by-one in getdelim (reported by Ilja van Sprundel)
   prevent integer overflows in printf (return -1, like Solaris)
+  fix putenv (Nikola Vladov)
 
 0.30:
   put exception handling frames in read-only section on AMD64 and S/390
