--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 0.32:
+  add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
