--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.32:
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
+  add btowc, wctype, iswctype
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
