--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.32:
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
   add btowc, wctype, iswctype
+  add some wide char routines
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
