--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
   add btowc, wctype, iswctype
   add some wide char routines
+  add statvfs, fstatvfs
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
