--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@
   some minor cleanups
   shrink some string functions (Kris Katterjohn)
   prepare x86_64 for syscall numbers > 255
+  fix unaligned memcpy if WANT_SMALL_STRING_ROUTINES is not defined
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
