--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@
   fix unaligned memcpy if WANT_SMALL_STRING_ROUTINES is not defined
     (Enrico Scholz)
   fix utmp, add utmpx support (R.L. Horn)
+  fix the dynamic library for the ARM architecture (Gernot Tenchio)
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
