--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@
     (Enrico Scholz)
   fix utmp, add utmpx support (R.L. Horn)
   fix the dynamic library for the ARM architecture (Gernot Tenchio)
+  fix of scanf with negative floats (Andre Oliveira)
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
