--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@
   fix the dynamic library for the ARM architecture (Gernot Tenchio)
   get ARM port to work with EABI (Tristan Newby)
   fix of scanf with negative floats (Andre Oliveira)
+  use vsyscall to do time(2) on x86-64
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
