--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@
   get ARM port to work with EABI (Tristan Newby)
   fix of scanf with negative floats (Andre Oliveira)
   use vsyscall to do time(2) on x86-64
+  implement back references in basic regexes
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
