--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,7 @@
   use vsyscall to do time(2) on x86-64
   implement back references in basic regexes
   make regex faster (coalesce n CHAR matches to one STRING match)
+  stdio speedup
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
