--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@
   support thread local storage (w00t!!!!)
   don't crash in getaddrinfo if hints is NULL (Gernot Tenchio)
   add -D_REENTRANT for -pthread in diet
+  don't segfault in setlocale if locale is NULL (Nikola Vladov)
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
