--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@
   don't crash in getaddrinfo if hints is NULL (Gernot Tenchio)
   add -D_REENTRANT for -pthread in diet
   don't segfault in setlocale if locale is NULL (Nikola Vladov)
+  implement _SC_PHYS_PAGES in sysconf()
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
