--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@
   add -D_REENTRANT for -pthread in diet
   don't segfault in setlocale if locale is NULL (Nikola Vladov)
   implement _SC_PHYS_PAGES in sysconf()
+  add some gcc attributes and restrict keywords to string.h
 
 0.31:
   getopt_long and getopt_long_only now refuse ambiguous abbreviations
