--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 0.33:
+  first stab at getting TLS to work in actual threads
+  use fs: to find current thread on x86_64
 
 0.32:
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
