--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@
     code that sets up the registers and segments used by the stack
     protector mechanism.
   fix sys/personality.h (Mathias Krause)
+  update sys/ptrace.h
 
 0.32:
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
