enlarge dev_t to 32-bit on i386, arm, sparc, s390 (Pascal Terjan)   update sys/stat.h to include nsec and enlarge dev_t

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,8 @@
   update sys/ptrace.h (Nikola Vladov)
   fix fork+pthread closing fd 0 (Tim München)
   finally add stdout tty detection and turn off linewise buffering if !tty
+  enlarge dev_t to 32-bit on i386, arm, sparc, s390 (Pascal Terjan)
+  update sys/stat.h to include nsec and enlarge dev_t
 
 0.32:
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
