various build fixes, add sys/atomic.h and the __CAS function

--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@
     (Tobias S. Josefowitz)
   change gettimeofday vsyscall to use the vdso
   add WANT_HOSTS_GIVEUP_EARLY in dietfeatures.h
+  various build fixes, add sys/atomic.h and the __CAS function
 
 0.32:
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
