--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,7 @@
   add WANT_HOSTS_GIVEUP_EARLY in dietfeatures.h
   various build fixes, add sys/atomic.h and the __CAS function
   redo nice with get/setpriority as glibc does (Thierry Vignaud)
+  add fdopendir
 
 0.32:
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
