--- a/CHANGES
+++ b/CHANGES
@@ -38,6 +38,7 @@
   various build fixes, add sys/atomic.h and the __CAS function
   redo nice with get/setpriority as glibc does (Thierry Vignaud)
   add fdopendir
+  add openat and friends
 
 0.32:
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
