add SO_RCVBUFFORCE and SO_SNDBUFFORCE change x64 start code so that return in main works even if the kernel lacks x32 support

--- a/CHANGES
+++ b/CHANGES
@@ -41,6 +41,8 @@
   add openat and friends
   srand(0) made rand() return a series of 0 instead of random data
     (https://banu.com/blog/42/openbsd-bug-in-the-random-function/)
+  add SO_RCVBUFFORCE and SO_SNDBUFFORCE
+  first stab at x32 support
 
 0.32:
   add mbsinit, mbrlen, mbtowc, wctomb, mbrtowc, wcrtomb, wcwidth
