--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.34:
   move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
+  add linux/seccomp.h linux/prctl.h linux/audit.h linux/elf-em.h linux/filter.h
 
 0.33:
   first stab at getting TLS to work in actual threads
