--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 0.34:
   move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
   add linux/seccomp.h linux/prctl.h linux/audit.h linux/elf-em.h linux/filter.h
+  SECURITY: make sure all assembler files mark the stack non-executable so
+    the kernel can map the stack of the whole program as non-executable
 
 0.33:
   first stab at getting TLS to work in actual threads
