add preadv, pwritev

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@
   add eventfd, inotify_init1, epoll_init1, accept4, recvmmsg, sendmmsg
   add dup3, fanotify_init, fanotify_mark, signalfd4, timerfd_settime
   add timerfd_gettime, setns, memfd_create, getrandom, syncfs
+  add preadv, pwritev
 
 0.33:
   first stab at getting TLS to work in actual threads
