--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@
   add preadv, pwritev
   add getcontext, setcontext, makecontext, swapcontext (i386 and x86_64 only for now)
   add implementation of hsearch and friends
+  add strverscmp (like GNU version but without special treatment for leading zeros)
 
 0.33:
   first stab at getting TLS to work in actual threads
