--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,8 @@
   add implementation of hsearch and friends
   add strverscmp (like GNU version but without special treatment for leading zeros)
   fix cuserid
+  SECURITY: fix integer overflow in scandir/scandir64 if your selector
+    leaves more than 1 billion filenames
 
 0.33:
   first stab at getting TLS to work in actual threads
