--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,8 @@
   fix cuserid
   SECURITY: fix integer overflow in scandir/scandir64 if your selector
     leaves more than 1 billion filenames
+  fix memory leaks in out of memory error paths in regcomp and librpc
+    udp and tcp server code (found by the llvm static analyzer)
 
 0.33:
   first stab at getting TLS to work in actual threads
