--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,7 @@
     leaves more than 1 billion filenames
   fix memory leaks in out of memory error paths in regcomp and librpc
     udp and tcp server code (found by the llvm static analyzer)
+  fix returning more than one match in regexec (Stefan Wagner)
 
 0.33:
   first stab at getting TLS to work in actual threads
