--- a/CHANGES
+++ b/CHANGES
@@ -20,7 +20,7 @@
   fix memory leaks in out of memory error paths in regcomp and librpc
     udp and tcp server code (found by the llvm static analyzer)
   fix returning more than one match in regexec (Stefan Wagner)
-  add getentropy (OpenBSD)
+  add getentropy, lazy arc4random clone (OpenBSD)
 
 0.33:
   first stab at getting TLS to work in actual threads
