move strnlen from libcompat into libc (it's POSIX now)   fix dn_expand argument signedness

--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,8 @@
   fix returning more than one match in regexec (Stefan Wagner)
   add getentropy, lazy arc4random clone (OpenBSD)
   define uintptr_t using __UINTPTR_TYPE__ (32-bit platforms may need a make clean)
+  move strnlen from libcompat into libc (it's POSIX now)
+  fix dn_expand argument signedness
 
 0.33:
   first stab at getting TLS to work in actual threads
