--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@
   define uintptr_t using __UINTPTR_TYPE__ (32-bit platforms may need a make clean)
   move strnlen from libcompat into libc (it's POSIX now)
   fix dn_expand argument signedness
+  add explicit_bzero, timingsafe_bcmp and timingsafe_memcmp (OpenBSD APIs useful for crypto)
 
 0.33:
   first stab at getting TLS to work in actual threads
