--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@
   i386 switched from mmap to mmap2. glibc has been doing this for ages,
     and we now follow suit (without fallback to mmap), because
     seccomp-filter can't inspect mmap arguments, so this helps security.
+  plumbing to get preliminary PIE support for x86_64
 
 0.33:
   first stab at getting TLS to work in actual threads
