--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,7 @@
   don't cause unaligned memory accesses in stackgap for the random from auxvec (Giorgio)
   implement malloc case for realpath
   use __builtin_mul_overflow in calloc if gcc is recent enough
+  cleanup s390 syscalls (Christian Seiler)
 
 0.33:
   first stab at getting TLS to work in actual threads
