ppc64 little endian port (Christian Seiler)

--- a/CHANGES
+++ b/CHANGES
@@ -40,6 +40,7 @@
   import Debian bugfixes (Christian Seiler)
   setjmp/longjmp for powerpcspe (Roland Stigge)
   add softfpu from glibc for powerpcspe (need to pass SOFTFPU=1 to make)
+  ppc64 little endian port (Christian Seiler)
 
 0.33:
   first stab at getting TLS to work in actual threads
